infra/k8s/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          args:
            - start-dev
            - --import-realm
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPath: realm-export.json
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
